// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fomr 初始化值 1`] = `
<div>
  <form>
    <input
      class="weui-input xrk-input"
      data-testid="input"
      name="name"
      type="text"
      value="小明"
    />
    <div
      class="xrk-if xrk-ac xrk-checkbox"
      data-testid="xrk-checkbox"
    >
      <input
        class="xrk-checkbox-hide"
        data-testid="check"
        name="sex"
        readonly=""
        value="false"
      />
      <i
        class="xrk-icon xrk-i-radio"
      />
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        1
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        2
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        大学
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        小学
      </div>
    </div>
    <div
      class="xrk-textarea"
    >
      <textarea
        class="xrk-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      >
        123456
      </textarea>
      <div
        class="xrk-textarea-number"
      >
        6
        /
        300
      </div>
      <div
        class="xrk-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 改变初始化值 1`] = `
<div>
  <form>
    <input
      class="weui-input xrk-input"
      data-testid="input"
      name="name"
      type="text"
      value="123"
    />
    <div
      class="xrk-if xrk-ac xrk-checkbox-active xrk-checkbox"
      data-testid="xrk-checkbox"
    >
      <input
        class="xrk-checkbox-hide"
        data-testid="check"
        name="sex"
        readonly=""
        value="true"
      />
      <i
        class="xrk-icon xrk-i-fill-select"
      />
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        1
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        2
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        大学
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        小学
      </div>
    </div>
    <div
      class="xrk-textarea"
    >
      <textarea
        class="xrk-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      >
        456
      </textarea>
      <div
        class="xrk-textarea-number"
      >
        3
        /
        300
      </div>
      <div
        class="xrk-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 渲染 1`] = `
<div>
  <form>
    <input
      class="weui-input xrk-input"
      data-testid="input"
      type="text"
      value=""
    />
    <div
      class="xrk-if xrk-ac xrk-checkbox"
      data-testid="xrk-checkbox"
    >
      <input
        class="xrk-checkbox-hide"
        data-testid="check"
        readonly=""
        value="false"
      />
      <i
        class="xrk-icon xrk-i-radio"
      />
    </div>
    <div
      class="xrk-textarea"
    >
      <textarea
        class="xrk-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        placeholder=""
      />
      <div
        class="xrk-textarea-number"
      >
        0
        /
        300
      </div>
      <div
        class="xrk-textarea-floor"
      />
    </div>
  </form>
</div>
`;

exports[`Fomr 自带值 1`] = `
<div>
  <form>
    <input
      class="weui-input xrk-input"
      data-testid="input"
      type="text"
      value="123"
    />
    <div
      class="xrk-if xrk-ac xrk-checkbox-active xrk-checkbox"
      data-testid="xrk-checkbox"
    >
      <input
        class="xrk-checkbox-hide"
        data-testid="check"
        readonly=""
        value="true"
      />
      <i
        class="xrk-icon xrk-i-fill-select"
      />
      男
    </div>
    <div
      class=""
      name="age"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="age"
        readonly=""
        value="[]"
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        1
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        2
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="3"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        3
      </div>
    </div>
    <div
      class=""
      name="study"
    >
      <input
        class="xrk-checkbox-group-hide"
        data-testid="check"
        name="study"
        readonly=""
        value=""
      />
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="1"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        大学
      </div>
      <div
        class="xrk-if xrk-ac xrk-checkbox"
        data-testid="xrk-checkbox"
      >
        <input
          class="xrk-checkbox-hide"
          data-testid="check"
          name=""
          readonly=""
          value="2"
        />
        <i
          class="xrk-icon xrk-i-radio"
        />
        小学
      </div>
    </div>
    <div
      class="xrk-textarea"
    >
      <textarea
        class="xrk-textarea-conter"
        data-testid="textarea"
        maxlength="300"
        name="liuyan"
        placeholder=""
      />
      <div
        class="xrk-textarea-number"
      >
        0
        /
        300
      </div>
      <div
        class="xrk-textarea-floor"
      />
    </div>
  </form>
</div>
`;
